hwlibrary also depends on hwengine
--HG--
branch : 0.9.20
extra : source : c4ae96531f8c32813950e3a34efc1b3ea6564eae

--- a/hedgewars/CMakeLists.txt
+++ b/hedgewars/CMakeLists.txt
@@ -197,6 +197,7 @@ if(BUILD_ENGINE_LIBRARY)
 
     add_definitions(-dHWLIBRARY)
     set_source_files_properties(hwLibrary.pas PROPERTIES OBJECT_DEPENDS "${sourcefiles_sofar}")
+    set_source_files_properties(hwLibrary.pas PROPERTIES OBJECT_DEPENDS hwengine.pas)
     add_library(hwengine SHARED hwLibrary.pas)
 else()
     # no need to change name here because target has same name
